fixed overflow, redundant db calls, package.json

--- a/app/renderer/css/main.css
+++ b/app/renderer/css/main.css
@@ -45,7 +45,7 @@ body {
 #view-controls-container {
   height: calc(100% - 208px);
   scrollbar-gutter: stable both-edges;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 #view-controls-container::-webkit-scrollbar {
